Fix player on mobile

--- a/sass/css/style.scss
+++ b/sass/css/style.scss
@@ -280,7 +280,7 @@ iframe {
 }
 
 .text-width {
-  max-width: 35em;
+  max-width: 90%;
   width: 35em;
 }
 
